--- a/app/views/shared/_imagenes.erb
+++ b/app/views/shared/_imagenes.erb
@@ -5,6 +5,8 @@
 		  		<%= object.label :picture1, 'Imagen 1' %>
 		  		<%= image_tag anuncio.picture1(:thumb),size:'150x150' %>
 		  		<%= object.file_field :picture1  %>
+		  		<!--%= link_to 'Eliminar Imagen', remove_image_path, id: object.id , pict: picture1, remote:true %-->
+		  		<%= check_box_tag 'picture1'%>
 			</div>
 	  	</div>
 
@@ -13,6 +15,7 @@
 		  		<%= object.label :picture2, 'Imagen 2' %>
 		  		<%= image_tag anuncio.picture2(:thumb),size:'150x150' %>
 		  		<%= object.file_field :picture2  %>
+		  		<%= check_box_tag 'picture2'%>
 			</div>
 	  	</div>
 
@@ -21,6 +24,7 @@
 		  		<%= object.label :picture3, 'Imagen 3' %>
 		  		<%= image_tag anuncio.picture3(:thumb),size:'150x150' %>
 		  		<%= object.file_field :picture3  %>
+		  		<%= check_box_tag 'picture3'%>
 			</div>
 	  	</div>
 	</div>
@@ -30,16 +34,17 @@
 		  		<%= object.label :picture4, 'Imagen 4' %>
 		  		<%= image_tag anuncio.picture4(:thumb),size:'150x150' %>
 		  		<%= object.file_field :picture4 %>
+		  		<%= check_box_tag 'picture4'%>
 			</div>
 	  	</div>
-	  	
+
 
 	  	<div class="col-md-4">
 			<div class="form-group form-el">
 		  		<%= object.label :picture5, 'Imagen 5' %>
 		  		<%= image_tag anuncio.picture5(:thumb),size:'150x150' %>
 		  		<%= object.file_field :picture5  %>
+		  		<%= check_box_tag 'picture5'%>
 			</div>
 	  	</div>
 	</div>
-	
