--- a/app/views/admin/trucks/edit.html.erb
+++ b/app/views/admin/trucks/edit.html.erb
@@ -7,9 +7,9 @@
   </div>
 </div>
 
-
-<%=render partial: 'form', locals:{path_form:  admin_truck_path , method_form: 'PATCH'} %>
-
+<div id='formulario'>
+    <%=render partial: 'form', locals:{path_form:  admin_truck_path , method_form: 'PATCH'} %>
+</div>
 
 <script>
     $('.removePicture').click(function(){
