--- a/app/views/admin/extras/edit.html.erb
+++ b/app/views/admin/extras/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-lg-12">
     <h1 class="page-header">
-      Repuesto <small>/ Agregar</small>
+      Repuesto <small>/ Editar</small>
     </h1>
     <%= render 'admin/includes/top' %>
   </div>
