--- a/app/views/admin/services/edit.html.erb
+++ b/app/views/admin/services/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-lg-12">
     <h1 class="page-header">
-      Servicio <small>/ Agregar</small>
+      Servicio <small>/ Editar</small>
     </h1>
     <%= render 'admin/includes/top' %>
   </div>
