--- a/app/views/admin/trucks/_form.html.erb
+++ b/app/views/admin/trucks/_form.html.erb
@@ -262,9 +262,9 @@
           <!-- Imagenes -->
 
           <%= render partial: 'shared/camposGeneralesII', locals:{ f: f } %> <br/> <br/> <br/> <br/>
-
-          <%= render partial: 'shared/imagenes', locals:{ object: f, anuncio: @truck } %> <br/> <br/> <br/> <br/>
-
+          <div id='imagenes'>
+            <%= render partial: 'shared/imagenes', locals:{ object: f, anuncio: @truck, type: 1 } %> <br/> <br/> <br/> <br/>
+          </div>
           <%= render partial: 'shared/botonera', locals:{ object: f, cancel_route: micamiones_path } %>
         </div>
       </div>
