--- a/app/views/pages/micamionesedit.html.erb
+++ b/app/views/pages/micamionesedit.html.erb
@@ -301,7 +301,7 @@
 
                 <!-- Imagenes -->
                 <%= render partial: 'shared/camposGeneralesII', locals:{ f: f } %> <br/> <br/> <br/> <br/>
-                <%= render partial: 'shared/imagenes', locals:{ object: f  , anuncio: @truck} %> <br/> <br/> <br/> <br/>
+                <%= render partial: 'shared/imagenes', locals:{ object: f  , anuncio: @truck, type: 0} %> <br/> <br/> <br/> <br/>
                 <%= render partial: 'shared/botonera', locals:{ object: f, cancel_route: micamiones_path } %>
               </div>
 
