--- a/app/views/pages/micamionesnew.html.erb
+++ b/app/views/pages/micamionesnew.html.erb
@@ -268,7 +268,7 @@
 
 				      <%= render partial: 'shared/camposGeneralesII', locals:{ f: f } %> <br/> <br/> <br/> <br/>
 
-							<%= render partial: 'shared/imagenes', locals:{ object: f , anuncio: @truck} %> <br/> <br/> <br/> <br/>
+							<%= render partial: 'shared/imagenes', locals:{ object: f , anuncio: @truck, type: 0} %> <br/> <br/> <br/> <br/>
 
 							<%= render partial: 'shared/botonera', locals:{ object: f, cancel_route: micamiones_path } %>
 
