--- a/app/views/shared/_form_extra.html.erb
+++ b/app/views/shared/_form_extra.html.erb
@@ -102,4 +102,4 @@
   </div>
 </div>
 
-<%= render partial: 'shared/imagenes', locals:{ object: f, anuncio: @extra } %>
+<%= render partial: 'shared/imagenes', locals:{ object: f, anuncio: @extra, type: 2 } %>
