--- a/app/views/shared/_form_service.html.erb
+++ b/app/views/shared/_form_service.html.erb
@@ -20,7 +20,7 @@
       <%= f.text_field :phone, :class =>'form-control', maxlength: 11 %>
     </div>
   </div>
-  
+
 </div>
 
 <div class="row">
@@ -32,7 +32,7 @@
       <%= f.email_field :email, :class =>'form-control', minlength: 1 %>
     </div>
   </div>
-  
+
   <div class="col-md-4">
     <div class="form-group">
       <%= f.label :address, 'Dirección' %>
@@ -93,4 +93,4 @@
   </div>
 </div>
 
-<%= render partial: 'shared/imagenes', locals:{ object: f , anuncio: @service} %>
+<%= render partial: 'shared/imagenes', locals:{ object: f , anuncio: @service, type: 3} %>
