fix  boton cancela rdel admin edit truck

--- a/app/views/admin/trucks/_form.html.erb
+++ b/app/views/admin/trucks/_form.html.erb
@@ -265,7 +265,7 @@
           <div id='imagenes'>
             <%= render partial: 'shared/imagenes', locals:{ object: f, anuncio: @truck, type: 1 } %> <br/> <br/> <br/> <br/>
           </div>
-          <%= render partial: 'shared/botonera', locals:{ object: f, cancel_route: micamiones_path } %>
+          <%= render partial: 'shared/botonera', locals:{ object: f, cancel_route: admin_trucks_path } %>
         </div>
       </div>
     <% end %>
