--- a/app/views/admin/type_truck/index.html.erb
+++ b/app/views/admin/type_truck/index.html.erb
@@ -29,41 +29,7 @@
 
 <div class="row">
   <div class="col-lg-12">
-    <div class="table-responsive">
-      <table class="table table-bordered table-hover table-striped">
-        <thead>
-        <tr>
-          <th>Nombre</th>
-          <th>Acciones</th>
-        </tr>
-        </thead>
-        <tbody>
-        <% @types.each do |type| %>
-            <tr>
-
-
-              <td>
-                <%= type.name %>
-              </td>
-              <td>
-
-                <%= link_to 'Agregar subtipos', admin_type_truck_sub_trucks_path(type.id), :class=>'btn btn-info' %>
-                <%= link_to 'Agregar Referencias', admin_type_truck_referencias_path(type.id), :class=>'btn btn-info' %>
-
-
-                <%= link_to 'Editar', edit_admin_type_truck_path(type.id), :class=>'btn btn-info' %>
-                <%= link_to 'Eliminar', {:controller => 'admin/type_truck', :action => 'destroy', :id => type.id}, :data => {:confirm => 'Estas seguro de eliminar este elemento?'}, :method => 'DELETE',  :class=>'btn btn-danger' %>
-              </td>
-            </tr>
-        <% end %>
-        </tbody>
-      </table>
-    </div>
-    <div class='row'>
-      <div id='paginator'>
-        <%= paginate @types %>
-      </div>
-    </div>
+    <%= render partial: 'shared/tableResult', locals:{objects:@types_filter, object_controller_name: controller_name} %>
   </div>
 </div>
 <!-- /.row -->
