--- a/app/views/admin/trucks/_form.html.erb
+++ b/app/views/admin/trucks/_form.html.erb
@@ -263,7 +263,12 @@
 
           <%= render partial: 'shared/camposGeneralesII', locals:{ f: f } %> <br/> <br/> <br/> <br/>
           <div id='imagenes'>
-            <%= render partial: 'shared/imagenes', locals:{ object: f, anuncio: @truck, type: 1 } %> <br/> <br/> <br/> <br/>
+            <% if bandNew==true %>
+              <%= render partial: 'shared/imagenesNew', locals:{ object: f, anuncio: @truck} %>
+            <% else %>
+              <%= render partial: 'shared/imagenes', locals:{ object: f, anuncio: @truck, type: 1 } %>
+            <% end %>
+             <br/> <br/> <br/> <br/>
           </div>
           <%= render partial: 'shared/botonera', locals:{ object: f, cancel_route: admin_trucks_path } %>
         </div>
