--- a/app/views/admin/trucks/edit.html.erb
+++ b/app/views/admin/trucks/edit.html.erb
@@ -8,7 +8,7 @@
 </div>
 
 <div id='formulario'>
-    <%=render partial: 'form', locals:{path_form:  admin_truck_path , method_form: 'PATCH'} %>
+    <%=render partial: 'form', locals:{path_form:  admin_truck_path , method_form: 'PATCH', bandNew: false} %>
 </div>
 
 <script>
