--- a/app/views/admin/trucks/new.html.erb
+++ b/app/views/admin/trucks/new.html.erb
@@ -8,7 +8,7 @@
 </div>
 
 
-<%=render partial: 'form', locals:{path_form:  admin_trucks_path , method_form: 'post'} %>
+<%=render partial: 'form', locals:{path_form:  admin_trucks_path , method_form: 'post', bandNew: true} %>
 
 
 
