--- a/app/views/pages/miserviciosedit.html.erb
+++ b/app/views/pages/miserviciosedit.html.erb
@@ -35,7 +35,7 @@
             </div>
         
         <% else %>
-          <%= render partial: 'shared/form_service', locals:{ f: f} %>
+          <%= render partial: 'shared/form_service', locals:{ f: f, bandNew: false,type:5} %>
        <%end%>
        <%= render partial: 'shared/botonera', locals:{ object: f, cancel_route: miservicios_path } %>
     <% end %>
