--- a/app/views/admin/type_truck/index.html.erb
+++ b/app/views/admin/type_truck/index.html.erb
@@ -23,8 +23,15 @@
     </p>
   </div>
       <div class="col-md-3 col-md-offset-6">
-        <%= render partial: 'includes/admin_search', locals: {object: @search, search_path: request.path, query_search_field: @query_search_field} %>
-    </div>
+        <div class="form-group">
+          <%= search_form_for @search, url: admin_type_truck_index_path, id:"searchForm" ,method: "get"  do |f| %>
+              <div>
+                <%= label_tag "isr",'Buscar:' %>
+                <%= f.search_field  :name_cont, class: "form-control form-el" %>
+              </div>
+          <% end %>
+        </div>
+      </div>
 </div>
 
 <div class="row">
