--- a/app/views/shared/_showBusyVan.html.erb
+++ b/app/views/shared/_showBusyVan.html.erb
@@ -4,7 +4,7 @@
           <%=  object.capacidadpasajeros.nil? ?  'Sin Información' : object.capacidadpasajeros %>
     </td>
     <td class="cell-label">
-          <b>Capacidad de Carga Matricula</b><br>
+          <b>Capacidad de Carga</b><br>
           <%=  object.capacidadcarga.nil? ?  'Sin Información' : object.capacidadcarga %>
     </td>
     <td class="cell-label">
