--- a/app/views/shared/_showCamposGeneralesI.html.erb
+++ b/app/views/shared/_showCamposGeneralesI.html.erb
@@ -3,7 +3,7 @@
       <b>Marca Motor</b><br>
       <%= object.motors_truck ? object.motors_truck.name : 'Sin información' %>
     </td>
-      
+
     <td class="cell-label">
       <b>Marca de la Caja</b><br>
       <%=object.boxes_truck ? object.boxes_truck.name : 'Sin Información' %>
@@ -16,6 +16,12 @@
       <b>Empresa Afiliada</b><br>
       <%= object.empresaafiliada? ? object.empresaafiliada : 'Sin información' %>
     </td>
-      
-    <td class="cell-label"></td>
+    <% if object.type_truck_id == 2 %>
+      <td class="cell-label">
+        <b>Tipo Cupo</b><br>
+        <%= @truck.spaces_truck_id.nil? ?  'Sin Información' : @truck.spaces_truck.name  %>
+      </td>
+    <%else %>
+    <td class='cell-label'></td>
+    <% end %>
 </tr>
