--- a/app/views/pages/camion.html.erb
+++ b/app/views/pages/camion.html.erb
@@ -1,5 +1,3 @@
-
-
 <!-- ============================================== HEADER : END ============================================== -->
 <div class="breadcrumb">
   <div class="container">
@@ -72,6 +70,7 @@
                     </td>
                   </tr>
                   <tr class ='nymou'><td class='cell-label'>Peso Bruto:</td><td class='pull-right'><%= @truck.pesobruto %> </td></tr>
+                  <tr class ='nymou'><td class='cell-label'>Referencia</td><td class='pull-right'><%= @truck.referencia.name %> </td></tr>
                   </tbody></table>
                 </div><!-- /.table-responsive -->
               </div><!-- /.module-body -->
