--- a/app/views/pages/camion.html.erb
+++ b/app/views/pages/camion.html.erb
@@ -193,7 +193,10 @@
                               <%= @truck.spaces_truck_id.nil? ?  'Sin Información' : @truck.spaces_truck.name  %>
                             </td>
 
-                            <td class="cell-label"></td>
+                            <td class="cell-label">
+                              <b>Poliza</b><br>
+                              <%= @truck.contracts_truck_id.nil? ?  'Sin Información' : @truck.contracts_truck.name  %>
+                            </td>
                           </tr>
                           <tr class="nymou">
                               <td class="cell-label">
@@ -202,7 +205,7 @@
                               </td>
                               <td class="cell-label">
                                 <b>Marca Carroceria</b><br>
-                                <%=  @truck.marca_carroceria_id.nil? ?  'Sin Información' : MarcaCarroceria.find(@truck.marca_carroceria_id) %>
+                                <%=  @truck.marca_carroceria_id.nil? ?  'Sin Información' : MarcaCarroceria.find(@truck.marca_carroceria_id).name %>
                               </td>
                               <td class="cell-label">
                                 <b>Marca Carpa</b><br>
@@ -238,7 +241,7 @@
                               </td>
                               <td class="cell-label">
                                 <b>Marca Carroceria</b><br>
-                                <%=  @truck.marca_carroceria_id.nil? ?  'Sin Información' : MarcaCarroceria.find(@truck.marca_carroceria_id) %>
+                                <%=  @truck.marca_carroceria_id.nil? ?  'Sin Información' : MarcaCarroceria.find(@truck.marca_carroceria_id).name %>
                               </td>
                               <td class="cell-label"></td>
                             -->
