--- a/app/views/includes/_footer.erb
+++ b/app/views/includes/_footer.erb
@@ -27,7 +27,7 @@
           <div class="contact-timing">
             <div class="module-heading">
               <a href="/mi-cuenta">Mis Anuncios</a> - <a href="/mi-cuenta">Renueva tu Anuncio</a> - <a href="/mi-cuenta">Notifica tu Venta</a> - <a href="/terminos">Terminos</a> - <a href="/politicas">Politicas</a>
-              <p>Llámanos gratis desde  tu fijo nacional o local al 018000054415455</p>
+              <p>Llámanos gratis desde  tu fijo nacional o local al 318 239 37 69</p>
             </div><!-- /.module-heading -->
 
             <div class="module-body">
