--- a/app/views/shared/_paso1.erb
+++ b/app/views/shared/_paso1.erb
@@ -36,7 +36,7 @@
 
             <div class="form-group">
 
-                  <%= f.label :nombre, 'Nombre de Vehiculo' %>
+                  <%= f.label :nombre, 'Nombre del Anuncio' %>
                   <%= f.text_field :nombre, :class =>'form-control'  %>
             </div>
 
